--- a/homework.ipynb
+++ b/homework.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 164,
    "metadata": {
     "id": "vU_BLpXEBq8E"
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 165,
    "metadata": {
     "id": "WwPXKuYW-MeA"
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 166,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -248,7 +248,7 @@
        "7                    2             2  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 167,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -294,7 +294,7 @@
        "Name: softness, dtype: int64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 168,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
        "19"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 169,
    "metadata": {
     "id": "WyNxML4oAvRh"
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 170,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -387,7 +387,7 @@
        "np.float64(2.25)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 172,
    "metadata": {
     "id": "iN_rB_QJBk_K"
    },
@@ -452,7 +452,7 @@
        "Text(0.5, 1.0, 'Rated Flavor vs Estimated Sweetness')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 173,
    "metadata": {
     "id": "ZcUQ3mnBOLmU"
    },
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 174,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -531,7 +531,7 @@
        "Name: prediction, dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 175,
    "metadata": {
     "id": "CNL0vOHrDfmT"
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 176,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -601,7 +601,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 177,
    "metadata": {
     "id": "tI7Fr0blQFJo"
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 178,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 179,
    "metadata": {
     "id": "zvIjSLCdGbZM"
    },
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 180,
    "metadata": {
     "id": "j8QCAkWMGdkv"
    },
@@ -727,7 +727,7 @@
        "array([0.2, 4. , 0.8, 0.8, 0. , 0.8, 0. , 0.8])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 181,
    "metadata": {
     "id": "7O7AReMcTCEJ"
    },
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 182,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -785,7 +785,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 183,
    "metadata": {
     "id": "P-KRYZurHBQY"
    },
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 184,
    "metadata": {
     "id": "vxJZcCrlHDGY"
    },
@@ -852,7 +852,7 @@
        "np.float64(3.795000000000001)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 185,
    "metadata": {
     "id": "d65RLeqxVGeL"
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 186,
    "metadata": {
     "id": "ihAvfuV4VMLS"
    },
@@ -917,7 +917,7 @@
        "Name: prediction, dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 187,
    "metadata": {
     "id": "88Ip7dA5TyQg"
    },
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 188,
    "metadata": {
     "id": "xXCnP3iTULWw"
    },
@@ -974,7 +974,7 @@
        "np.float64(2.5)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 189,
    "metadata": {
     "id": "MC-XVY3IWz3x"
    },
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 190,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1042,7 +1042,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 191,
    "metadata": {
     "id": "J3emV8dqXlgN"
    },
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 192,
    "metadata": {
     "id": "64OoS_GZXogM"
    },
@@ -1103,7 +1103,7 @@
        "np.float64(0.7375)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
        "np.float64(2.2142857142857144)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        "np.float64(0.33333333333333304)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "0.5555555555555557"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 199,
    "metadata": {
     "id": "W1tI40DQZJTZ"
    },
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
        "np.float64(2.0)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 201,
    "metadata": {
     "id": "_1Ty-1wxaKgp"
    },
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1446,7 @@
        " np.float64(2.0))"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 203,
    "metadata": {
     "id": "78iwN5f4bKtS"
    },
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 204,
    "metadata": {
     "id": "ve2czA0Ebzdf"
    },
@@ -1538,7 +1538,7 @@
        " np.float64(0.496363))"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 205,
    "metadata": {
     "id": "pqbMFuUpaj5m"
    },
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 206,
    "metadata": {
     "id": "JbEO9iX4VwQG"
    },
@@ -1591,10 +1591,11 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(0.4285714285714285)"
+       "array([[1.        , 0.42857143],\n",
+       "       [0.42857143, 1.        ]])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1603,7 @@
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p18 = np.corrcoef(f18(df), df[\"rated_flavor\"])[0, 1]\n",
+    "p18 = np.corrcoef(f18(df), df[\"rated_flavor\"])\n",
     "p18\n"
    ]
   },
@@ -1621,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 207,
    "metadata": {
     "id": "Ri6AjxYpcZol"
    },
@@ -1633,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 208,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1668,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1678,7 @@
        "np.float64(2.12)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1830,7 +1831,7 @@
        "7                    2  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1860,7 +1861,7 @@
       "\u001b[31mKeyError\u001b[39m: 'rated_flavor'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[160]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m df = mango_inputs\n\u001b[32m      8\u001b[39m X = df[[\u001b[33m\"\u001b[39m\u001b[33myellow_rating\u001b[39m\u001b[33m\"\u001b[39m]]\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m Y = \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrated_flavor\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Build and fit the model\u001b[39;00m\n\u001b[32m     12\u001b[39m model = LinearRegression()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[211]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m df = mango_inputs\n\u001b[32m      8\u001b[39m X = df[[\u001b[33m\"\u001b[39m\u001b[33myellow_rating\u001b[39m\u001b[33m\"\u001b[39m]]\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m Y = \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrated_flavor\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Build and fit the model\u001b[39;00m\n\u001b[32m     12\u001b[39m model = LinearRegression()\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
       "\u001b[31mKeyError\u001b[39m: 'rated_flavor'"
@@ -1894,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
